# HireAgent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d38ba57bebea_initial_pgvector_extension_and_core_.py
backend/app/: config.py  db.py  main.py
backend/app/agents/: compressor.py  essay_writer.py  evaluator.py  jd_analyzer.py  orchestrator.py  rag_retriever.py  state.py
backend/app/api/v1/: essays.py  jobs.py  library.py  llm.py  nodes.py  ollama.py  projects.py  settings.py
backend/app/llm/: base.py  factory.py
backend/app/llm/providers/: anthropic.py  google.py  ollama.py  openai.py
backend/app/models/: __init__.py  career_document.py  essay_library.py  job_application.py  user_llm_config.py
backend/app/rag/: embeddings.py  indexer.py  retriever.py  tech_extractor.py
backend/app/rag/loaders/: file.py  github.py  text.py
backend/app/schemas/: essay.py  jobs.py  library.py  llm.py  node.py  ollama.py  projects.py  settings.py
backend/app/services/: jobs.py  library.py  projects.py  settings.py  url_fetcher.py
backend/app/utils/: char_counter.py  crypto.py  gpu.py  llm_retry.py  text_cleaner.py
backend/tests/: conftest.py  test_api_smoke.py  test_char_counter.py  test_rag_integration.py  test_retriever_weights.py  test_tech_extractor.py  test_text_cleaner.py
docs/: 001-char-count-validation.md  CHANGELOG.md  CLAUDE.md  M1_execution_guide.md  README.md  ROADMAP.md  architecture.md  erd.md  feedback.md  m5-checklist.md  requirements.md  review-2026-06-02.md  test-scenarios.md
docs/adr/: 002-no-auto-job-submit.md  003-multi-user-design-from-start.md  004-pgvector-over-chroma.md  005-korean-embeddings.md  006-langgraph-orchestration.md  007-nextjs-from-start.md  008-multi-llm-provider.md  009-jd-input-text-first.md  010-dedicated-ollama-container.md  011-llm-factory-registry-pattern.md  012-sse-streaming-response.md  013-job-application-model.md  014-phase3-ollama-local-only.md  015-langgraph-send-item-subgraph.md  016-sqlalchemy-async-asyncpg.md  017-kure-v1-embedding.md  018-url-fetch-secondary-input.md  019-github-repo-indexing.md  020-file-upload-resume.md  021-tech-stack-auto-extraction.md  022-essay-output-defense-layers.md  023-spa-site-url-policy.md  024-react-flow-workflow-builder.md  025-per-item-agent-config.md  026-evaluation-rubric-and-transparency.md  027-api-key-db-encryption.md  028-dynamic-workflow-graph.md  029-node-composition-validation-loop.md  030-visual-workflow-builder-free-dag.md  031-conversational-stepwise-execution.md  032-jd-coverage-map.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx  (+2 more)
scripts/: pull-models.sh
(+25 files in other folders)
