[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hireagent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # DB
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # Config & Security
    "pydantic-settings>=2.0.0",
    "cryptography>=42.0.0",
    # LLM Providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",  # LLM 호출 429/503 재시도
    # Agents & RAG
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "sentence-transformers>=3.0.0",
    # HTML parsing (URL 페칭)
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # 파일 업로드 (이력서/문서)
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    # GPU VRAM 조회 (모델 적합성 사전 경고)
    "nvidia-ml-py>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# 모든 async 테스트가 같은 event loop 공유 → DB engine pool이 닫힌 loop 참조하는 문제 방지
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
